Implemented code generation - removed previous all_patterns.txt to use a single JSON file containing all patterns and their 'configuration' - gRPC unary - unary is now working - gRPC stream - stream, stream - unary, unary - stream have skeleton impl - improved pattern detection - refacto supports(x) function